# MozPolBiz

./: Makefile  README.md  pyproject.toml  requirements.txt
MozPolBiz/: 1_html_2_register.py  2_indie_vars_DBWHO.py  2_map_entities copy.py  3_outcome_vars_DBWHO.py  __init__.py  dataset.py  features.py  indie_vars_DBWHO.py  map_entities.py  old_not_needed_2_map_entities copy.py  plots.py  test_file.py
MozPolBiz/accounting_matrix/: __init__.py  get_both.py  get_matrix_12.py  get_matrix_15.py
MozPolBiz/adm0_stuff/: __init__.py  load_landmatrix.py  map_FDI_markets.py  map_mines_on_adm.py  norm_entity_names.py  select_national_offshore_accounts.py
MozPolBiz/corpus_translation/: __init__.py  update_corpus_translation.py
MozPolBiz/data_parser/: fetch_DBR_experts.py
MozPolBiz/dbwho_specs/: __init__.py  adjust_dbwho_ist.py  map_industry_keywords.py
MozPolBiz/export/: __init__.py  dbwho_missing_cols.py  export_dbwho_panel.py  export_to_panel_folder.py  store_pickle.py
MozPolBiz/firm_register/: __init__.py  dates.py  define_annoucments.py  define_entities.py  define_year.py  dict_norm.py  find_fdi_suppliers.py  handle_nuit_nuel.py  identify_FDI_affiliations.py  locations.py  map_all_owner_ids.py  map_capital.py  map_fdi_markets.py  map_inp.py  map_top40.py  map_top40_fdi.py  noramlize_entity_names.py  norm_locations.py
MozPolBiz/flexi/: __init__.py  commodities.py  flexi.py  get_all_tables.py  parties.py  select_flexi.py
MozPolBiz/handle_html/: __init__.py  (+2 more)
docs/: mkdocs.yml
notebooks/: check_consitency.ipynb  check_nan_in_firms.ipynb  select_assets_map.ipynb
(+74 files in other folders)
