[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MozPolBiz"
version = "0.0.1"
description = "Politically exposed persons are linked to private firms in Mozambique since Independence. Through a generalized event study, it is shown that significant gains in company ownership and structural power are achieved by political officeholders, especially in joint-stock firms in business services, mining, and finance, indicating wealth accumulation as rentier-brokers."
authors = [
  { name = "Felix Schilling" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["MozPolBiz"]
force_sort_within_sections = true
